{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 28,
  "lineage": "540206ea-24a8-89e6-de61-e570bd43443d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949008909725:security-group/sg-0264a353abaa9b507",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0264a353abaa9b507",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "helped-mastiff-education_rds",
            "name_prefix": "",
            "owner_id": "949008909725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "helped-mastiff-education_rds"
            },
            "tags_all": {
              "HashiCorpLearnTutorial": "no-code-provisioning",
              "Name": "helped-mastiff-education_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f8e1f82d72ed48e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_pet.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949008909725:network-acl/acl-0fc8c7998e25589e3",
            "default_network_acl_id": "acl-0fc8c7998e25589e3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fc8c7998e25589e3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "949008909725",
            "subnet_ids": [
              "subnet-0564d4c0936b47590",
              "subnet-0c11dad2467cfd6aa",
              "subnet-0e645806bbaf9ee54"
            ],
            "tags": {
              "Name": "helped-mastiff-education-default"
            },
            "tags_all": {
              "HashiCorpLearnTutorial": "no-code-provisioning",
              "Name": "helped-mastiff-education-default"
            },
            "vpc_id": "vpc-08f8e1f82d72ed48e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_pet.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949008909725:route-table/rtb-08a2dbd7735456ec3",
            "default_route_table_id": "rtb-08a2dbd7735456ec3",
            "id": "rtb-08a2dbd7735456ec3",
            "owner_id": "949008909725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "helped-mastiff-education-default"
            },
            "tags_all": {
              "HashiCorpLearnTutorial": "no-code-provisioning",
              "Name": "helped-mastiff-education-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08f8e1f82d72ed48e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_pet.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949008909725:security-group/sg-0a843f8425308bdc4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a843f8425308bdc4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "949008909725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "helped-mastiff-education-default"
            },
            "tags_all": {
              "HashiCorpLearnTutorial": "no-code-provisioning",
              "Name": "helped-mastiff-education-default"
            },
            "vpc_id": "vpc-08f8e1f82d72ed48e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_pet.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949008909725:internet-gateway/igw-057164ce2ebd1916c",
            "id": "igw-057164ce2ebd1916c",
            "owner_id": "949008909725",
            "tags": {
              "Name": "helped-mastiff-education"
            },
            "tags_all": {
              "HashiCorpLearnTutorial": "no-code-provisioning",
              "Name": "helped-mastiff-education"
            },
            "vpc_id": "vpc-08f8e1f82d72ed48e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-057164ce2ebd1916c",
            "id": "r-rtb-0ed5a0e866c5b0a2b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed5a0e866c5b0a2b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949008909725:route-table/rtb-0ed5a0e866c5b0a2b",
            "id": "rtb-0ed5a0e866c5b0a2b",
            "owner_id": "949008909725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057164ce2ebd1916c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "helped-mastiff-education-public"
            },
            "tags_all": {
              "HashiCorpLearnTutorial": "no-code-provisioning",
              "Name": "helped-mastiff-education-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f8e1f82d72ed48e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf0881bbe67f972f",
            "route_table_id": "rtb-0ed5a0e866c5b0a2b",
            "subnet_id": "subnet-0e645806bbaf9ee54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0034c975e611319ec",
            "route_table_id": "rtb-0ed5a0e866c5b0a2b",
            "subnet_id": "subnet-0c11dad2467cfd6aa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060d1a3b87088b972",
            "route_table_id": "rtb-0ed5a0e866c5b0a2b",
            "subnet_id": "subnet-0564d4c0936b47590"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949008909725:subnet/subnet-0e645806bbaf9ee54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e645806bbaf9ee54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949008909725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "helped-mastiff-education-public-us-east-2a"
            },
            "tags_all": {
              "HashiCorpLearnTutorial": "no-code-provisioning",
              "Name": "helped-mastiff-education-public-us-east-2a"
            },
            "vpc_id": "vpc-08f8e1f82d72ed48e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949008909725:subnet/subnet-0c11dad2467cfd6aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c11dad2467cfd6aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949008909725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "helped-mastiff-education-public-us-east-2b"
            },
            "tags_all": {
              "HashiCorpLearnTutorial": "no-code-provisioning",
              "Name": "helped-mastiff-education-public-us-east-2b"
            },
            "vpc_id": "vpc-08f8e1f82d72ed48e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949008909725:subnet/subnet-0564d4c0936b47590",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0564d4c0936b47590",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949008909725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "helped-mastiff-education-public-us-east-2c"
            },
            "tags_all": {
              "HashiCorpLearnTutorial": "no-code-provisioning",
              "Name": "helped-mastiff-education-public-us-east-2c"
            },
            "vpc_id": "vpc-08f8e1f82d72ed48e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949008909725:vpc/vpc-08f8e1f82d72ed48e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc8c7998e25589e3",
            "default_route_table_id": "rtb-08a2dbd7735456ec3",
            "default_security_group_id": "sg-0a843f8425308bdc4",
            "dhcp_options_id": "dopt-03cfbaaf1823736f4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f8e1f82d72ed48e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a2dbd7735456ec3",
            "owner_id": "949008909725",
            "tags": {
              "Name": "helped-mastiff-education"
            },
            "tags_all": {
              "HashiCorpLearnTutorial": "no-code-provisioning",
              "Name": "helped-mastiff-education"
            }
          },
          "dependencies": [
            "random_pet.random"
          ]
        }
      ]
    }
  ]
}